--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -24,7 +24,8 @@
 		{#- Add an arbitrary string to the bundle #}
 		{%- css %}* { box-sizing: border-box; }{% endcss %}
 		{#- Add the contents of a file to the bundle #}
-		{%- css %}{% include "public/css/index.css" %}{% endcss %}
+		{%- css %}{% include "public/css/bulma-min.css" %}{% endcss %}
+		{%- css %}{% include "public/css/custom.css" %}{% endcss %}
 		{#- Or add from node_modules #}
 		{# {%- css %}{% include "node_modules/prismjs/themes/prism-okaidia.css" %}{% endcss %} #}
 
@@ -36,26 +37,36 @@
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
-		<header>
-			<a href="/" class="home-link">{{ metadata.title }}</a>
+		<header class="navbar">
+			<a href="/" class="navbar-brand">{{ metadata.title }}</a>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
-			<nav>
+			<nav class="navbar-menu">
 				<h2 class="visually-hidden">Top level navigation menu</h2>
-				<ul class="nav">
+				<ul class="navbar-start">
 				{%- for entry in collections.all | eleventyNavigation %}
-					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
+					<li class="navbar-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
 				{%- endfor %}
 				</ul>
 			</nav>
 		</header>
 
-		<main id="skip">
+		<main class="section container" id="skip">
 			{{ content | safe }}
 		</main>
 
-		<footer></footer>
+		<footer class="footer">
+			 <div class="content has-text-centered">
+    <p>
+      <strong>&copy; 2015 - {{ year}} | {{ meta.title}}</strong> by Helen Burgess</a><br>
+ 			 The source code is licensed <a href="https://opensource.org/license/mit">MIT</a>. The website content is licensed
+      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//"
+        >CC BY NC SA 4.0</a
+      >.
+    </p>
+  </div>
+		</footer>
 
-		<!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
+
 	</body>
 </html>
