--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,38 +1,18 @@
 <!doctype html>
-<html lang="{{ metadata.language }}">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title or metadata.title }}</title>
 		<meta name="description" content="{{ description or metadata.description }}">
 
-		{#- Atom and JSON feeds included by default #}
 		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
 		<link rel="alternate" href="/feed/feed.json" type="application/json" title="{{ metadata.title }}">
 
-		{#- Uncomment this if you’d like folks to know that you used Eleventy to build your site!  #}
-		{#- <meta name="generator" content="{{ eleventy.generator }}"> #}
-
-		{#-
-		CSS bundles are provided via the `eleventy-plugin-bundle` plugin:
-		1. You can add to them using `{% css %}`
-		2. You can get from them using `{% getBundle "css" %}` or `{% getBundleFileUrl "css" %}`
-		3. You can do the same for JS: {% js %}{% endjs %} and <script>{% getBundle "js" %}</script>
-		4. Learn more: https://github.com/11ty/eleventy-plugin-bundle
-		#}
-
-		{#- Add an arbitrary string to the bundle #}
 		{%- css %}* { box-sizing: border-box; }{% endcss %}
-		{#- Add the contents of a file to the bundle #}
-		{%- css %}{% include "public/css/bulma-min.css" %}{% endcss %}
-		{%- css %}{% include "public/css/custom.css" %}{% endcss %}
-		{#- Or add from node_modules #}
-		{# {%- css %}{% include "node_modules/prismjs/themes/prism-okaidia.css" %}{% endcss %} #}
+		{%- css %}{% include "css/style.css" %}{% endcss %}
 
-		{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
 		<style>{% getBundle "css" %}</style>
-		{#- Renders the CSS bundle using a separate file, if you can't set CSP directive style-src: 'unsafe-inline' #}
-		{#- <link rel="stylesheet" href="{% getBundleFileUrl "css" %}"> #}
 	</head>
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
@@ -40,7 +20,6 @@
 		<header class="navbar">
 			<a href="/" class="navbar-brand">{{ metadata.title }}</a>
 
-			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav class="navbar-menu">
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="navbar-start">
@@ -56,17 +35,13 @@
 		</main>
 
 		<footer class="footer">
-			 <div class="content has-text-centered">
-    <p>
-      <strong>&copy; 2015 - {{ year}} | {{ meta.title}}</strong> by Helen Burgess</a><br>
- 			 The source code is licensed <a href="https://opensource.org/license/mit">MIT</a>. The website content is licensed
-      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//"
-        >CC BY NC SA 4.0</a
-      >.
-    </p>
-  </div>
+			<div class="content has-text-centered">
+				<p>
+					<strong>&copy; 2015 - {{ "now" | date("yyyy") }} | {{ metadata.title }}</strong> by Helen Burgess<br>
+					The source code is licensed <a href="https://opensource.org/license/mit">MIT</a>. The website content is licensed
+					<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+				</p>
+			</div>
 		</footer>
-
-
 	</body>
 </html>
