--- a/src/content/tags-list.njk
+++ b/src/content/tags-list.njk
@@ -5,7 +5,7 @@ layout: /layouts/home.njk
 <h1>Tags</h1>
 
 <ul>
-{% for tag in collections.all | getAllTags %}
+{% for tag in tags %}
 	{% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
 	<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a></li>
 {% endfor %}
