--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -19,14 +19,14 @@ permalink: /
   </div>
 </section>
 
-<!-- About Section -->
+<!-- Introduction  Section -->
 <section class="content-wrapper" data-layout="modular-two-columns">
   <div class="page-container">
-    <div class="about-grid">
-      <div class="about-column">
+    <div class="introduction-grid">
+      <article class="introduction-content">
         <h2>Welcome to My Digital Garden &hellip;</h2>
         <p>
-          A haven where I explore the road less traveled, unravel the complexities of my journey, and find solace in the transformative power of web technologies. As a multifaceted individual, I wear multiple hats: I am a veteran, a devoted mother and doting nana, a master knitter, and a website developer. Above all, I am a seeker of meaning, drawing inspiration from great thinkers like Adler and the Stoics.
+          &hellip; A haven where I explore the road less traveled, unravel the complexities of my journey, and find solace in the transformative power of web technologies. As a multifaceted individual, I wear multiple hats: I am a veteran, a devoted mother and doting nana, a master knitter, and a website developer. Above all, I am a seeker of meaning, drawing inspiration from great thinkers like Adler and the Stoics.
         </p>
         <p>
           I have always been passionate about learning and sharing knowledge. My journey has taken me through various fields, each enriching my understanding and skills. I believe in the power of community and the importance of giving back.
@@ -35,8 +35,8 @@ permalink: /
         <p>
           The year 2000 marked a pivotal moment in my life. I bid farewell to the RAAF and embarked on a 14-year journey in vocational education, specializing in web design and development. It was a chapter dedicated to finding healing and meaning, as I guided eager learners with meticulous precision, witnessing their growth and evolution.
         </p>
-      </div>
-      <div class="about-column">
+      </article>
+      <article class="introduction-content">
         <h2>My Journey</h2>
         <p>
           My career path has been as diverse as it has been enlightening. Serving in the RAAF, I navigated the complexities of military life while finding solace in teaching and technology. From the challenges of loading telex machines to deciphering the enigma of the infamous ration pack, I thrived on problem-solving and illuminating the path forward for those around me.
@@ -48,7 +48,8 @@ permalink: /
         <p>
           In 2015, I took another transformative step, intertwining the wisdom of Adler and the Stoics into my personal odyssey of healing and self-discovery. Through Codemaster Institute bootcamps, I found a platform to inspire and empower aspiring web enthusiasts, igniting their passion for the digital realm.
         </p>
-      </div>
+        
+        </article>
     </div>
     <h3>Unlocking a World of Possibilities:</h3>
     <p>
@@ -64,7 +65,7 @@ permalink: /
     <div class="writings-grid">
       <div class="writing-card">
         <div class="writing-image-link">
-          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/enigma-code-breaker.jpg" alt="a set of wheels showcasing the machine that broke the enigma code">
+          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/engima-code-breaker.jpg" alt="a set of wheels showcasing the machine that broke the enigma code">
         </div>
         <h3>Technology</h3>
         <p>Exploring the depths of technology from cryptography to modern web development.</p>
@@ -88,7 +89,7 @@ permalink: /
       </div>
       <div class="writing-card">
         <div class="writing-image-link">
-          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/DALLE-2023-10-19-momento-mori.png" alt="generated digital art of a momento-mori theme">
+          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/momento-mori.png" alt="generated digital art of a momento-mori theme">
         </div>
         <h3>Digital Art</h3>
         <p>Exploring digital art and AI-generated creations.</p>
