styled writings section and added categories, contact section

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/grid-layouts.css">
     <link rel="stylesheet" href="/css/grid-modular.css">
     <link rel="stylesheet" href="/css/variables.css">
+    {% block head %}{% endblock %}
+    <script src="https://kit.fontawesome.com/49adc57732.js" crossorigin="anonymous"></script>
   </head>
   <body>
     {% include "partials/header.njk" %}
