--- a/src/pages/writings.njk
+++ b/src/pages/writings.njk
@@ -4,43 +4,46 @@ title: Writings
 permalink: /writings/
 ---
 
-<div class="page-container">
+<div class="page-container writings-collection">
   <div class="writings-header">
     <h1>Writings</h1>
   </div>
+  <div class="writings-intro">
+    <p>This is a collection of my writings over the years. I have written about a range of topics from my experiences as a veteran to my thoughts on technology and the future.</p>
+  </div>
 
-  <div data-layout="modular-four-columns">
-    {% for post in collections.writings | reverse %}
-      <div class="module-square-2">
-        <article class="writing-card">
-          <a href="{{ post.url }}" class="writing-link">
-            {% if post.data.image %}
-              <div class="writing-image-container">
-                <img src="{{ post.data.image }}" 
-                     alt="{{ post.data.title }}" 
-                     class="writing-image"
-                     loading="lazy">
-              </div>
-            {% endif %}
-            
-            <div class="writing-content">
-              <h2>{{ post.data.title }}</h2>
-              
-              <time datetime="{{ post.date | dateToISO }}">
-                {{ post.date | dateDisplay }}
-              </time>
-              
-              {% if post.data.excerpt %}
-                <div class="writing-excerpt">
-                  {{ post.data.excerpt }}
+  {% for category, posts in collections.writingsByCategory %}
+    <div id="{{ category | lower }}" class="category-section">
+      <h2>{{ category }}</h2>
+      <div class="writings-grid">
+        {% for post in posts | reverse %}
+          <article class="writing-card">
+            <a href="{{ post.url }}" class="writing-link">
+              {% if post.data.image %}
+                <div class="writing-image-container">
+                  <img src="{{ post.data.image }}" 
+                       alt="{{ post.data.title }}" 
+                       class="writing-image"
+                       loading="lazy">
                 </div>
               {% endif %}
               
-              <span class="read-more">Read more</span>
-            </div>
-          </a>
-        </article>
+              <div class="writing-content">
+                <h2>{{ post.data.title }}</h2>
+                <time datetime="{{ post.date | dateToISO }}">
+                  {{ post.date | dateDisplay }}
+                </time>
+                {% if post.data.excerpt %}
+                  <div class="writing-excerpt">
+                    {{ post.data.excerpt }}
+                  </div>
+                {% endif %}
+                <span class="read-more">Read more</span>
+              </div>
+            </a>
+          </article>
+        {% endfor %}
       </div>
-    {% endfor %}
-  </div>
+    </div>
+  {% endfor %}
 </div>
