--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="/css/variables.css">
     {% block head %}{% endblock %}
     <script src="https://kit.fontawesome.com/49adc57732.js" crossorigin="anonymous"></script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id='G-SEQK0YEX5Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-SEQK0YEX5Z');
+    </script>
   </head>
   <body>
     {% include "partials/header.njk" %}
@@ -20,5 +28,7 @@
     </main>
 
     {% include "partials/footer.njk" %}
+    <script src="/assets/js/main.js"></script>
+
   </body>
 </html>
