--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <!-- Hero Section -->
-<section class="hero" data-layout="modular-four-columns">
+<section class="home-hero hero" data-layout="modular-four-columns">
    <div class="hero-content">
     <h1>Exploring the Road Less Travelled</h1>
     <p>
@@ -23,6 +23,7 @@ permalink: /
 <section class="content-wrapper" data-layout="modular-two-columns">
   <div class="page-container">
     <div class="introduction-grid">
+        <!-- Column 1 -->
       <article class="introduction-content">
         <h2>Welcome to My Digital Garden &hellip;</h2>
         <p>
@@ -31,30 +32,35 @@ permalink: /
         <p>
           I have always been passionate about learning and sharing knowledge. My journey has taken me through various fields, each enriching my understanding and skills. I believe in the power of community and the importance of giving back.
         </p>
+      </article>
+      <article class="introduction-content">
         <h3>A Turning Point:</h3>
         <p>
           The year 2000 marked a pivotal moment in my life. I bid farewell to the RAAF and embarked on a 14-year journey in vocational education, specializing in web design and development. It was a chapter dedicated to finding healing and meaning, as I guided eager learners with meticulous precision, witnessing their growth and evolution.
         </p>
       </article>
       <article class="introduction-content">
-        <h2>My Journey</h2>
+        <h3>My Journey</h3  >
         <p>
           My career path has been as diverse as it has been enlightening. Serving in the RAAF, I navigated the complexities of military life while finding solace in teaching and technology. From the challenges of loading telex machines to deciphering the enigma of the infamous ration pack, I thrived on problem-solving and illuminating the path forward for those around me.
         </p>
         <p>
           After leaving the RAAF, I transitioned into education, where I found a new calling in teaching web design and development. This phase of my life was dedicated to helping others discover their potential and passion for technology.
         </p>
+      </article>
+      <article class="introduction-content">
         <h3>The Quest for Healing and Discovery:</h3>
         <p>
           In 2015, I took another transformative step, intertwining the wisdom of Adler and the Stoics into my personal odyssey of healing and self-discovery. Through Codemaster Institute bootcamps, I found a platform to inspire and empower aspiring web enthusiasts, igniting their passion for the digital realm.
         </p>
-        
-        </article>
+      </article>
+      <article class="introduction-content final-content">
+        <h3>Unlocking a World of Possibilities:</h3>
+        <p>
+          Today, my commitment to education and personal growth is stronger than ever. I venture into the digital frontier to empower individuals like you with the skills and knowledge to thrive in the vast landscape of web technologies. Through every thread I knit and website I develop, I showcase the transformative power of web technologies.
+        </p>
+      </article>
     </div>
-    <h3>Unlocking a World of Possibilities:</h3>
-    <p>
-      Today, my commitment to education and personal growth is stronger than ever. I venture into the digital frontier to empower individuals like you with the skills and knowledge to thrive in the vast landscape of web technologies. Through every thread I knit and website I develop, I showcase the transformative power of web technologies.
-    </p>
   </div>
 </section>
 
@@ -73,7 +79,7 @@ permalink: /
       </div>
       <div class="writing-card">
         <div class="writing-image-link">
-          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/raaf-service.jpg" alt="Lived Experience writings">
+          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/med8_n290_crest2.jpg" alt="Lived Experience writings">
         </div>
         <h3>A Lived Experience</h3>
         <p>Sharing personal stories and insights from military service to health journeys.</p>
@@ -81,7 +87,7 @@ permalink: /
       </div>
       <div class="writing-card">
         <div class="writing-image-link">
-          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/craft-image.jpg" alt="Craft writings">
+          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/knitted-heirloom-shawl.png" alt="Craft writings">
         </div>
         <h3>Craft</h3>
         <p>Exploring handmade creations through knitting, crochet, and other crafts.</p>
@@ -89,7 +95,7 @@ permalink: /
       </div>
       <div class="writing-card">
         <div class="writing-image-link">
-          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/digital-art.jpg" alt="Digital Art writings">
+          <img class="writing-image" loading="lazy" decoding="async" src="/assets/images/momento-mori.png" alt="Digital Art writings">
         </div>
         <h3>Digital Art</h3>
         <p>Exploring digital creativity and AI-generated artwork.</p>
