--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,8 +11,41 @@
     <link rel="stylesheet" href="/css/variables.css">
     {% block head %}{% endblock %}
     <script src="https://kit.fontawesome.com/49adc57732.js" crossorigin="anonymous"></script>
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEQK0YEX5Z"></script>
+    {% if metadata.googleAnalytics and metadata.enableCookieConsent %}
+    <script>
+        // Check for existing consent
+        if (localStorage.getItem('analyticsConsent') === 'true') {
+            (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','{{ metadata.googleAnalytics }}');
+        }
+    </script>
+    {% endif %}
+    <!-- End Google Tag Manager -->
     </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    {% if metadata.googleAnalytics and metadata.enableCookieConsent %}
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id={{ metadata.googleAnalytics }}"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    {% endif %}
+    <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-consent" class="cookie-banner" style="display: none;">
+        <p>This website uses analytics cookies to help us improve our services. <a href="/privacy">Learn more</a></p>
+        <div class="cookie-buttons">
+            <button id="accept-cookies" class="button is-accent">Accept</button>
+            <button id="decline-cookies" class="button is-secondary">Decline</button>
+        </div>
+    </div>
+
     {% include "partials/header.njk" %}
     
     <main>
@@ -22,58 +55,28 @@
     {% include "partials/footer.njk" %}
     <script src="/assets/js/main.js"></script>
 
-    <!-- Cookie Consent -->
-    <div id="cookie-consent" class="cookie-banner" style="display: none;">
-        <p>This website uses analytics cookies to help us improve our services. <a href="/privacy">Learn more</a></p>
-        <div class="cookie-buttons">
-            <button id="accept-cookies" class="button is-accent">Accept</button>
-            <button id="decline-cookies" class="button is-secondary">Decline</button>
-        </div>
-    </div>
-
-    <!-- Modified Google Analytics -->
+    <!-- Cookie Consent Handler -->
     {% if metadata.googleAnalytics and metadata.enableCookieConsent %}
     <script>
-        // Check for existing consent
-        function hasAnalyticsConsent() {
-            return localStorage.getItem('analyticsConsent') === 'true';
-        }
-
-        // Initialize analytics only if consent is given
-        function initializeAnalytics() {
-            if (hasAnalyticsConsent()) {
-                // Google Analytics
-                (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-                })(window,document,'script','dataLayer','{{ metadata.googleAnalytics }}');
-            }
-        }
-
-        // Handle consent
         document.addEventListener('DOMContentLoaded', function() {
             const consentBanner = document.getElementById('cookie-consent');
+            const consentStatus = localStorage.getItem('analyticsConsent');
             
-            if (!localStorage.getItem('analyticsConsent')) {
+            if (consentStatus === null) {
                 consentBanner.style.display = 'block';
             }
 
             document.getElementById('accept-cookies').addEventListener('click', function() {
                 localStorage.setItem('analyticsConsent', 'true');
                 consentBanner.style.display = 'none';
-                initializeAnalytics();
+                // Reload page to initialize GTM after consent
+                window.location.reload();
             });
 
             document.getElementById('decline-cookies').addEventListener('click', function() {
                 localStorage.setItem('analyticsConsent', 'false');
                 consentBanner.style.display = 'none';
             });
-
-            // Initialize if consent already given
-            if (hasAnalyticsConsent()) {
-                initializeAnalytics();
-            }
         });
     </script>
     {% endif %}
