--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,40 +11,48 @@
     <link rel="stylesheet" href="/css/variables.css">
     {% block head %}{% endblock %}
     <script src="https://kit.fontawesome.com/49adc57732.js" crossorigin="anonymous"></script>
-    <!-- Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEQK0YEX5Z"></script>
-    {% if metadata.googleAnalytics and metadata.enableCookieConsent %}
     <script>
-        // Check for existing consent
-        if (localStorage.getItem('analyticsConsent') === 'true') {
-            (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-            })(window,document,'script','dataLayer','{{ metadata.googleAnalytics }}');
+        // Check for consent before initializing GA4
+        if (localStorage.getItem('cookieConsent') === 'accepted') {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-SEQK0YEX5Z');
         }
     </script>
-    {% endif %}
-    <!-- End Google Tag Manager -->
     </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    {% if metadata.googleAnalytics and metadata.enableCookieConsent %}
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id={{ metadata.googleAnalytics }}"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    {% endif %}
-    <!-- End Google Tag Manager (noscript) -->
-
-    <!-- Cookie Consent Banner -->
-    <div id="cookie-consent" class="cookie-banner" style="display: none;">
-        <p>This website uses analytics cookies to help us improve our services. <a href="/privacy">Learn more</a></p>
-        <div class="cookie-buttons">
-            <button id="accept-cookies" class="button is-accent">Accept</button>
-            <button id="decline-cookies" class="button is-secondary">Decline</button>
-        </div>
+    <div id="cookie-banner" style="display: none;">
+        <p>We use cookies to improve your experience. <a href="/privacy">Learn more</a></p>
+        <button onclick="acceptCookies()">Accept</button>
+        <button onclick="declineCookies()">Decline</button>
     </div>
+
+    <script>
+        function initGA() {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-SEQK0YEX5Z');
+        }
+
+        function acceptCookies() {
+            localStorage.setItem('cookieConsent', 'accepted');
+            document.getElementById('cookie-banner').style.display = 'none';
+            initGA();
+        }
+
+        function declineCookies() {
+            localStorage.setItem('cookieConsent', 'declined');
+            document.getElementById('cookie-banner').style.display = 'none';
+        }
+
+        // Show banner if consent not given
+        if (!localStorage.getItem('cookieConsent')) {
+            document.getElementById('cookie-banner').style.display = 'block';
+        }
+    </script>
 
     {% include "partials/header.njk" %}
     
@@ -54,32 +62,6 @@
 
     {% include "partials/footer.njk" %}
     <script src="/assets/js/main.js"></script>
-
-    <!-- Cookie Consent Handler -->
-    {% if metadata.googleAnalytics and metadata.enableCookieConsent %}
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const consentBanner = document.getElementById('cookie-consent');
-            const consentStatus = localStorage.getItem('analyticsConsent');
-            
-            if (consentStatus === null) {
-                consentBanner.style.display = 'block';
-            }
-
-            document.getElementById('accept-cookies').addEventListener('click', function() {
-                localStorage.setItem('analyticsConsent', 'true');
-                consentBanner.style.display = 'none';
-                // Reload page to initialize GTM after consent
-                window.location.reload();
-            });
-
-            document.getElementById('decline-cookies').addEventListener('click', function() {
-                localStorage.setItem('analyticsConsent', 'false');
-                consentBanner.style.display = 'none';
-            });
-        });
-    </script>
-    {% endif %}
 
   </body>
 </html>
