--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,7 +1,7 @@
 <header class="navbar">
   <div class="navbar-brand">
     <a href="/" class="navbar-item">
-      <img src="/img/logo.svg" alt="Link to Home">
+      <img src="/assets/images/other/logo.svg" alt="Link to Home">
     </a>
   </div>
   <nav class="navbar-menu">
