finsihed adding posts, edited styles.

--- a/src/_includes/layouts/writing.njk
+++ b/src/_includes/layouts/writing.njk
@@ -12,9 +12,9 @@ layout: layouts/base.njk
     <div class="hero-content">
       <h1>{{ title }}</h1>
       <div class="writing-meta">
-        <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
+        <time  datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
         {% if category %}
-          <span class="category">{{ category }}</span>
+          <span class="category tag">{{ category }}</span>
         {% endif %}
         {% if tags %}
           {% for tag in tags %}
