--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -78,6 +78,9 @@ eleventyNavigation:
         <h2 class="title">Join Helen's Journey</h2>
         <p>Today, Helen B stands as a symbol of innovation, resilience, and the transformative power of technology. Her life is a narrative of taking the road less traveled, constantly seeking new horizons in the digital realm and beyond. Join her as she continues to explore, inspire, and empower.</p>
       </div>
+
+</main> 
+        {% include "partials/newsletter-cta.njk" %}
     </div>
   </section>
 
