added cookies consent, fixed form error changed images on pages.

--- a/src/pages/contact.njk
+++ b/src/pages/contact.njk
@@ -8,12 +8,7 @@ eleventyNavigation:
 ---
 
 <div class="page-container">
-  <section class="hero contact-hero">
-    <div class="hero-content">
-      <h1 class="hero-title">Keep in Touch</h1>
-      <p class="hero-subtitle">I look forward to meeting you on the road less travelled.</p>
-    </div>
-  </section>
+ {% include "partials/contact-hero.njk" %}
 
 
 
@@ -116,3 +111,4 @@ eleventyNavigation:
   </section>
 </div>
 
+  {% include "partials/newsletter-cta.njk" %}
