--- a/src/_includes/partials/newsletter-cta.njk
+++ b/src/_includes/partials/newsletter-cta.njk
@@ -104,8 +104,12 @@
 </style>
 
 <section class="newsletter-cta">
-  <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
-  <form action="https://app.kit.com/forms/7697780/subscriptions" 
+  <script src="https://f.convertkit.com/ckjs/ck.5.js" 
+          async 
+          defer
+          data-uid="2e145b68de"
+          data-cookies-policy="reject"></script>
+  <form action="https://app.kit.com/forms/7697780/subscriptions?cookie_free=true" 
         class="seva-form formkit-form" 
         method="post" 
         data-sv-form="7697780" 
