added link to rss

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -21,6 +21,7 @@
             <li><a href="/writings">Writings</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/privacy-policy">Privacy Policy</a></li>
+
            </ul>
         </nav>
       </div>
@@ -59,6 +60,10 @@
         <span class="icon"><i class="fa-brands fa-github"></i></span>
         <span class="label">GitHub</span>
       </a>
+    </li>
+    <li><a href="/rss" target="blank">
+    <span class="icon"><i class="fa-brands fa-rss"></i></span><span class="label">RSS Feed</span>
+    </a>
     </li>
   </ul>
 </div>
