--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -33,36 +33,36 @@
   <ul class="social-links">
     <li>
       <a href="https://bsky.app/profile/hlnbee" target="_blank" rel="me noopener noreferrer">
-       <i class="fa-brands fa-bluesky"></i>
+       <i class="fab fa-bluesky"></i>
         <span class="label">Bluesky</span>
       </a>
     </li>
     <li>
       <a href="https://mastodon.au/@hlnbee" target="_blank" rel="me noopener noreferrer">
-        <span class="icon"><i class="fa-brands fa-mastodon"></i></span>
+        <span class="icon"><i class="fab fa-mastodon"></i></span>
         <span class="label">Mastodon</span>
       </a>
     </li>
     <li>
       <a href="https://www.facebook.com/hlnbee" target="_blank" rel="noopener noreferrer">
-        <span class="icon"><i class="fa-brands fa-facebook-f"></i></span>
+        <span class="icon"><i class="fab fa-facebook-f"></i></span>
         <span class="label">Facebook</span>
       </a>
     </li>
     <li>
       <a href="https://www.linkedin.com/in/helen-burgess-hlnb/" target="_blank" rel="noopener noreferrer">
-        <span class="icon"><i class="fa-brands fa-linkedin-in"></i></span>
+        <span class="icon"><i class="fab fa-linkedin-in"></i></span>
         <span class="label">LinkedIn</span>
       </a>
     </li>
     <li>
       <a href="https://github.com/hlnb" target="_blank" rel="noopener noreferrer">
-        <span class="icon"><i class="fa-brands fa-github"></i></span>
+        <span class="icon"><i class="fab fa-github"></i></span>
         <span class="label">GitHub</span>
       </a>
     </li>
-    <li><a href="/rss" target="blank">
-    <span class="icon"><i class="fa-brands fa-rss"></i></span><span class="label">RSS Feed</span>
+    <li><a href="/feed.xml" target="blank">
+    <span class="icon"><i class="fas fa-rss"></i></span><span class="label">RSS Feed</span>
     </a>
     </li>
   </ul>
